--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,12 @@ input, a, button {
 
 section {
   width: 100%;
-  height: 100vh;
   position: relative;
 }
 
+#intro {
+  height: 100vh;
+}
 #intro h1 {
   position: absolute;
   height: 160px;
@@ -72,7 +74,7 @@ section {
 }
 #intro .intro_tit {
   position: absolute;
-  bottom: 5%;
+  top: 15%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -103,7 +105,7 @@ section {
   font: 12px/1 "Oswald", sans-serif;
   color: #111;
   position: absolute;
-  bottom: 67%;
+  top: 44px;
   opacity: 0;
 }
 #intro .menuMo {
@@ -160,6 +162,116 @@ section {
   transition: 0.5s;
 }
 
+#self_info {
+  padding: 180px 0;
+  overflow: hidden;
+}
+#self_info .inner_txt {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 200px;
+}
+#self_info .inner_txt > div {
+  width: 30%;
+  height: 400px;
+  padding: 0 20px;
+}
+#self_info .inner_txt > div.left_box {
+  display: flex;
+  align-items: center;
+}
+#self_info .inner_txt > div.left_box p {
+  font: 24px/1.6 "Oswald", sans-serif;
+}
+#self_info .inner_txt > div.right_box .left_box_pic {
+  height: 100%;
+  border: 1px solid red;
+}
+#self_info .slide_box {
+  width: 100%;
+  margin-bottom: 200px;
+}
+#self_info .slide_box > div p {
+  font: bold 100px/1 "Oswald", sans-serif;
+}
+#self_info .slide_box > div.upper_content {
+  width: 4606px;
+  margin-bottom: 60px;
+}
+#self_info .slide_box > div.upper_content p {
+  color: #111;
+  margin-left: -500px;
+}
+#self_info .slide_box > div.lower_content {
+  width: 5258px;
+}
+#self_info .slide_box > div.lower_content p {
+  color: #999;
+}
+#self_info .self_list {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+#self_info .self_list ul {
+  width: 55%;
+}
+#self_info .self_list ul li {
+  width: 100%;
+  border-top: 1px solid #111;
+  transition: 0.5s;
+  background: #fff;
+  position: relative;
+  overflow: hidden;
+}
+#self_info .self_list ul li a {
+  display: block;
+  width: 100%;
+  height: 140px;
+  font: bold 60px/120px "Oswald", sans-serif;
+  color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #111;
+  padding-left: 20px;
+  transition: 0.5s;
+}
+#self_info .self_list ul li a span {
+  display: block;
+  font: bold 14px/1 "Oswald", sans-serif;
+  -webkit-text-stroke-width: 0px;
+  color: #111;
+  transform: translateY(-20px);
+  transition: 0.5s;
+}
+#self_info .self_list ul li:last-child {
+  border-bottom: 1px solid #111;
+}
+#self_info .self_list ul li::before {
+  content: "";
+  width: 40px;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: -40px;
+  transition: 0.5s;
+}
+#self_info .self_list ul li:hover {
+  background: #cdc3bd;
+}
+#self_info .self_list ul li:hover::before {
+  left: 20px;
+}
+#self_info .self_list ul li:hover a {
+  color: #fff;
+  -webkit-text-stroke-width: 0px;
+  transform: translateX(60px);
+}
+#self_info .self_list ul li:hover a span {
+  color: #fff;
+}
+
 .menuMoCon {
   width: 100%;
   height: 100vh;
@@ -196,6 +308,24 @@ section {
 }
 .menuMoCon.on {
   left: 0;
+}
+
+.mouse_cursor {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: 2px solid darkorange;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.self_list_frame {
+  width: 550px;
+  height: 280px;
+  position: fixed;
+  top: 0;
+  right: 120px;
 }
 
 /*# sourceMappingURL=style.css.map */
